# Ruc

./: .gitignore  CMakeLists.txt  License.md  Ruc.sln
examples/: main.cpp
include/Ruc/: Ruc.hpp  RucDecl.hpp  RucTypes.hpp
include/Ruc/Core/: Core.hpp  CoreDecl.hpp  CoreTypes.hpp  Macro.hpp  Status.hpp
include/Ruc/Core/templates/: Status.hpp
vs/Ruc/: Ruc.vcxitems  Ruc.vcxitems.filters
vs/RucExamples/: RucExamples.vcxproj
